Mobile HTTP: Custom request implemented
HTTP: Refactored; Attachment + payload logic moved to abstract part;